--- a/css/style.css
+++ b/css/style.css
@@ -622,42 +622,37 @@ main,
   position: relative;
 }
 
-.main-nav-box{
-  position: absolute;
-  overflow: hidden;
-  bottom: -163px;
-  width: 1160px;
-  height: 162px;
-  left: -60px;
-  z-index: 2;
-}
-
 .main-nav-list{
   position: absolute;
-  display: flex;
-  flex-direction: column;
+  display: none;
+  flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
   box-sizing: border-box;
   width: 1160px;
-  height: 162px;
-  top: -100%;
-  z-index: 2;
-  padding-top: 23px;
+  min-height: 163px;
+  left: -60px;
+  top: 25px;
+  padding-top: 21px;
   padding-bottom: 23px;
   padding-left: 60px;
+  z-index: 2;
   background-color: #f8e296;
-  transition: all 0.2s linear;
+}
+
+.main-nav-header:active,
+.main-nav-list:hover,
+.main-nav-list:focus,
+.main-nav-header:focus+.main-nav-list,
+.main-nav-header:hover+.main-nav-list,
+.main-nav-header:active+.main-nav-list{
+  display: flex;
 }
 
 .main-nav-item a{
   display: block;
   min-width: 141px;
-  padding: 6px 59px 6px 0px;
-}
-
-.main-nav-item:nth-child(5){
-  padding-bottom: 10px;
+  padding: 6px 62px 6px 0px;
 }
 
 .main-nav-header:focus,
@@ -669,16 +664,6 @@ main,
 .main-nav-header:active{
   cursor: pointer;
   opacity: 0.3;
-}
-
-.main-nav-header:active,
-.main-nav-list:hover,
-.main-nav-list:focus,
-.main-nav-header:focus+.main-nav-box .main-nav-list,
-.main-nav-header:hover+.main-nav-box .main-nav-list,
-.main-nav-header:active+.main-nav-box .main-nav-list{
-  top: 0px;
-  transition: all 0.2s linear;
 }
 
 /*================================================Слайдер=========================*/
@@ -711,6 +696,21 @@ main,
   align-items: center;
 }
 
+.hit-item-pic-1{
+  position: absolute;
+  right: 52px;
+  top: 0px;
+}
+.hit-item-pic-2{
+  position: absolute;
+  right: 64px;
+  top: 13px;
+}
+.hit-item-pic-3{
+  position: absolute;
+  right: -31px;
+  top: 66px;
+}
 .hit-item-desc{
   position: relative;
   display: flex;
@@ -1968,7 +1968,7 @@ footer a{
 }
 
 .price-adjust legend{
-  padding-bottom: 35px;
+  padding-bottom: 31px;
 }
 
 .price-controls{
@@ -2049,7 +2049,7 @@ footer a{
 
 /*-------------------------Цвет--------------*/
 .color-chbox legend{
-  padding-bottom: 18px;
+  padding-bottom: 16px;
 }
 
 .item-form .color-chbox{
