--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     src: url(../fonts/gilroylight.woff) format("woff");
     font-variant: normal;
     font-stretch: normal;
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
 }
 
@@ -14,7 +14,7 @@
     src: url(../fonts/gilroyextrabold.woff) format("woff");
     font-variant: normal;
     font-stretch: normal;
-    font-weight: normal;
+    font-weight: 800;
     font-style: normal;
 }
 
@@ -24,7 +24,7 @@
     src: url(../fonts/opensans.woff) format("woff");
     font-variant: normal;
     font-stretch: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -34,7 +34,7 @@
     src: url(../fonts/opensanslight.woff) format("woff");
     font-variant: normal;
     font-stretch: normal;
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
 }
 
@@ -423,6 +423,13 @@ main,
     left: 60px;
 }
 
+.header-logo-index,
+.header-logo-index:focus,
+.header-logo-index:hover,
+.header-logo-index:active{
+    opacity: 1;
+}
+
 .box-user {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -540,6 +547,7 @@ main,
     position: relative;
     width: 300px;
     min-height: 30px;
+    vertical-align: baseline;
     background-color: transparent;
     cursor: pointer;
     z-index: 1;
@@ -797,17 +805,6 @@ main,
     padding: 6px 62px 6px 0px;
 }
 
-.main-nav-header:focus,
-.main-nav-header:hover {
-    cursor: pointer;
-    opacity: 0.6;
-}
-
-.main-nav-header:active {
-    cursor: pointer;
-    opacity: 0.3;
-}
-
 .slider-hits {
     top: -113px;
     width: 1200px;
@@ -954,6 +951,7 @@ main,
     margin-bottom: 175px;
     min-height: 95px;
     width: 510px;
+    color: #464646;
 }
 
 .hit-about-btn {
@@ -988,8 +986,8 @@ main,
 }
 
 .feature-box,
-dd,
-dt {
+.feature-term,
+.feature-desc {
     padding: 0px;
     margin: 0px;
 }
@@ -1002,7 +1000,7 @@ dt {
     min-width: 160px;
 }
 
-dd {
+.feature-desc {
     font-family: "Gilroy", "Arial", sans-serif;
     font-size: 36px;
     font-weight: 300;
@@ -1012,7 +1010,7 @@ dd {
     text-align: left;
 }
 
-dt {
+.feature-term {
     font-size: 13px;
     line-height: 20px;
     letter-spacing: 0.13px;
@@ -1253,6 +1251,7 @@ dt {
 
 .services-desc p {
     padding-bottom: 20px;
+    color: #464646;
 }
 
 .services-desc-1::before {
@@ -1296,7 +1295,7 @@ dt {
 .pop-brands {
     width: 1200px;
     padding: 0px 20px 0px;
-    margin: 0px auto 87px;
+    margin: 0px auto 47px;
 }
 
 .pop-brands-list a:hover,
@@ -1305,20 +1304,30 @@ dt {
     opacity: 1;
 }
 
-.pop-brands ul {
+.pop-brands-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     position: relative;
     width: 1160px;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     padding: 0px;
+}
+
+.pop-brands-list li{
+    margin-bottom: 40px;
+    margin-right: 39px;
+}
+.pop-brands-list li:nth-child(4n) {
+    margin-right: 0px;
 }
 
 .pop-brands-list img {
@@ -1472,14 +1481,10 @@ dt {
     bottom: 0px;
 }
 
-footer {
+.main-ftr{
     min-height: 323px;
     min-width: 1200px;
     background-color: #464646;
-    color: #fff;
-}
-
-footer a {
     color: #fff;
 }
 
@@ -1537,14 +1542,58 @@ footer a {
     top: 0px;
 }
 
+.login-ftr:hover,
+.compare-ftr:hover,
+.cart-ftr:hover,
+.login-ftr:focus,
+.compare-ftr:focus,
+.cart-ftr:focus,
+.login-ftr:active,
+.compare-ftr:active,
+.cart-ftr:active{
+    opacity: 1;
+}
+
 .cart-ftr,
 .compare-ftr,
 .login-ftr,
-.log-out-ftr {
+.log-out-ftr{
     padding-bottom: 18px;
     padding-left: 28px;
-    margin-left: 37px;
+    margin-left: 29px;
     position: relative;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.login-ftr:hover,
+.compare-ftr:hover,
+.cart-ftr:hover,
+.login-ftr:focus,
+.compare-ftr:focus,
+.cart-ftr:focus{
+    color: rgba(255, 255, 255, 1);
+}
+
+.login-ftr:active,
+.compare-ftr:active,
+.cart-ftr:active{
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.login-ftr:hover::before,
+.compare-ftr:hover::before,
+.cart-ftr:hover::before,
+.login-ftr:focus::before,
+.compare-ftr:focus::before,
+.cart-ftr:focus::before{
+    opacity: 0.6;
+}
+
+
+.login-ftr:active::before,
+.compare-ftr:active::before,
+.cart-ftr:active::before{
+    opacity: 0.3;
 }
 
 .log-out-ftr {
@@ -1593,9 +1642,14 @@ footer a {
     max-width: 600px;
 }
 
+.box-ftr-2 a{
+    color: rgba(255, 255, 255, 1);
+}
+
 .adr {
     font-style: inherit;
     width: 240px;
+    letter-spacing: -0.3px;
 }
 
 .phone {
@@ -1603,7 +1657,7 @@ footer a {
     -ms-flex-order: 1;
     order: 1;
     margin-left: 39px;
-    letter-spacing: 0.5px;
+    letter-spacing: -0.3px;
     width: 200px;
     text-align: right;
 }
@@ -1776,6 +1830,15 @@ footer a {
     cursor: pointer;
 }
 
+.modal-close:hover,
+.modal-close:focus{
+    opacity: 1;
+}
+
+.modal-close:active{
+    opacity: 0.3;
+}
+
 .fb-form input {
     background-color: #f2f2f2;
     -webkit-box-sizing: border-box;
@@ -1809,8 +1872,7 @@ footer a {
 .fb-form textarea:focus,
 .fb-form input:focus {
     background-color: #ffffff;
-    border: 3px solid rgba(240, 197, 46, 0.5);
-    outline: none;
+    outline: 3px solid rgba(240, 197, 46, 0.5);
 }
 
 .fb-form input:invalid {
@@ -1898,7 +1960,6 @@ footer a {
     font-size: 14px;
     position: relative;
     padding-right: 34px;
-    cursor: pointer;
     color: rgba(0, 0, 0, 0.3);
 }
 
@@ -1934,6 +1995,14 @@ footer a {
 
 .breadcrumbs-item:last-child {
     padding-right: 0px;
+}
+
+.breadcrumbs-item:last-child a,
+.breadcrumbs-item:last-child a:hover,
+.breadcrumbs-item:last-child a:focus,
+.breadcrumbs-item:last-child a:active {
+    color: rgba(0, 0, 0, 0.3);
+    cursor: default;
 }
 
 .breadcrumbs-item:last-child::before {
@@ -2008,7 +2077,6 @@ footer a {
 
 .item-price {
     font-family: "Gilroy", "Arial", sans-serif;
-    ;
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
@@ -2055,9 +2123,9 @@ footer a {
 }
 
 .btn-to-cart {
-    margin-top: 50%;
+    margin-top: 47%;
     min-width: 200px;
-    margin-bottom: 33px;
+    margin-bottom: 8px;
 }
 
 .item:hover .item-hover {
@@ -2068,6 +2136,9 @@ footer a {
 
 .btn-to-compare {
     opacity: 0.5;
+    font-size: 13px;
+    line-height: 36px;
+    letter-spacing: 0.13px;
 }
 
 .btn-to-compare:hover {
@@ -2170,10 +2241,6 @@ footer a {
     opacity: 0.3;
 }
 
-.type-item-active a {
-    opacity: 1;
-}
-
 .type-item a:hover,
 .type-item a:focus {
     opacity: 0.6;
@@ -2181,6 +2248,14 @@ footer a {
 
 .type-item a:active {
     opacity: 1;
+}
+
+.type-item-active a,
+.type-item-active a:hover,
+.type-item-active a:focus,
+.type-item-active a:active {
+    opacity: 1;
+    cursor: default;
 }
 
 .order-up::before {
@@ -2206,11 +2281,7 @@ footer a {
 }
 
 .order-item a {
-    opacity: 0.3;
-}
-
-.order-item-active a {
-    opacity: 1;
+    opacity: 0.2;
 }
 
 .order-item a:hover,
@@ -2220,6 +2291,14 @@ footer a {
 
 .order-item a:active {
     opacity: 1;
+}
+
+.order-item-active a,
+.order-item-active a:hover,
+.order-item-active a:focus,
+.order-item-active a:active {
+    opacity: 1;
+    cursor: default;
 }
 
 .item-filter {
@@ -2611,7 +2690,6 @@ footer a {
     opacity: 0.3;
 }
 
-.pagination-item-active a:hover,
 .pagination-item a:hover {
     opacity: 0.6;
 }
@@ -2620,6 +2698,10 @@ footer a {
     opacity: 1;
 }
 
-.pagination-item-active a {
+.pagination-item-active a,
+.pagination-item-active a:hover,
+.pagination-item-active a:focus,
+.pagination-item-active a:active {
     opacity: 1;
+    cursor: default;
 }
